moved bib and removed .toc file

--- a/report.tex
+++ b/report.tex
@@ -50,7 +50,7 @@
 \input{sections/hindsight}
 
 \bibliographystyle{plain}
-\bibliography{references}
+\bibliography{misc/references}
 
 \appendix
 \input{misc/appendix}
