Avancée du 11 Août

--- a/misc/references.bib
+++ b/misc/references.bib
@@ -1,8 +1,10 @@
-@TYPE{labelref,
-  title={TITLE},
-  author={AUTHOR},
-  isbn={ISBN},
-  url={URL},
-  year={YEAR},
-  publisher={PUBLISHER}
+% https://www.overleaf.com/learn/latex/Bibliography_management_with_bibtex#Reference_guide
+
+@inproceedings{Barreto-Muller:asf2002,
+  author = {Luciano Porto Barreto et Gilles Muller},
+  title = {Bossa: une approche langage à la conception d'ordonnanceurs de processus},
+  booktitle = {Journées francophones des jeunes chercheurs en systèmes d'exploitation (ASF'2002)},
+  year = {2002},
+  month = {Avril},
+  URL = {https://hal.inria.fr/inria-00072431/}
 }
