--- a/report.tex
+++ b/report.tex
@@ -6,13 +6,15 @@
 \author{Victor Malod}
 \date{Août 2021}
 
-\usepackage{natbib}   % Pour la bibliographie
-\usepackage{graphicx} % Pour les insertions d'images
-\usepackage{setspace} % Pour l'interligne
-\usepackage{geometry} % Pour la marge dans le document
-\usepackage{fancyhdr} % Pour l'en-tête et pied de page (plus d'info ici : https://www.overleaf.com/learn/latex/Headers_and_footers)
-\usepackage{nameref}  % Pour reférencer le nom de la section (voir ci dessous)
-\usepackage{babel}    % Pour la langue
+\usepackage{natbib}        % Pour la bibliographie
+\usepackage{graphicx}      % Pour les insertions d'images
+\usepackage{setspace}      % Pour l'interligne
+\usepackage{geometry}      % Pour la marge dans le document
+\usepackage{fancyhdr}      % Pour l'en-tête et pied de page (plus d'info ici : https://www.overleaf.com/learn/latex/Headers_and_footers)
+\usepackage{nameref}       % Pour reférencer le nom de la section (voir ci dessous)
+\usepackage[french]{babel} % Pour la langue
+\usepackage{hyperref}      % Pour les liens clicables
+\usepackage{microtype}     % Pour la justification du texte
 \makeatletter
 \newcommand*{\currentname}{\@currentlabelname}
 \makeatother
