--- a/sections/context.tex
+++ b/sections/context.tex
@@ -2,3 +2,8 @@
 \label{context}
 
 Lorem ipsum dolor sit amet.
+
+
+Peut etre à supprimer plus tard :
+
+L'analyseur en question est en réalité séparé en deux parties : une partie qui s'occupe de la vérifications des types et une autre pour exercer des vérifications spécifiques au domaine, qui utilise un système de preuve par logique linéaire.
