--- a/sections/context.tex
+++ b/sections/context.tex
@@ -6,4 +6,6 @@ Lorem ipsum dolor sit amet.
 
 Peut etre à supprimer plus tard :
 
-L'analyseur en question est en réalité séparé en deux parties : une partie qui s'occupe de la vérifications des types et une autre pour exercer des vérifications spécifiques au domaine, qui utilise un système de preuve par logique linéaire.
+L'analyseur en question est en réalité séparé en deux parties : une partie qui s'occupe de la 
+vérifications des types et une autre pour exercer des vérifications spécifiques au domaine, qui
+utilise un système de preuve par logique linéaire.
