Avancée du 12 Août

--- a/misc/references.bib
+++ b/misc/references.bib
@@ -8,3 +8,20 @@
   month = {Avril},
   URL = {https://hal.inria.fr/inria-00072431/}
 }
+
+@article{IOSchedulers,
+  author = {Colin Ian King},
+  title = {IOSchedulers},
+  journal = {Ubuntu Wiki},
+  year = {2019},
+  month = {Septembre},
+  URL = {https://wiki.ubuntu.com/Kernel/Reference/IOSchedulers}
+}
+@article{Kyber,
+  author = {Jonathan Corbet},
+  title = {Two new block I/O schedulers for 4.12},
+  journal = {Lwn.net},
+  year = {2017},
+  month = {Avril},
+  URL = {https://lwn.net/Articles/720675/}
+}
