--- a/report.tex
+++ b/report.tex
@@ -15,6 +15,7 @@
 \usepackage[french]{babel} % Pour la langue
 \usepackage{hyperref}      % Pour les liens clicables
 \usepackage{microtype}     % Pour la justification du texte
+\usepackage{tabularx}      % Pour des tableaux plus flexible
 \makeatletter
 \newcommand*{\currentname}{\@currentlabelname}
 \makeatother
