modifications grace au retour de palix

--- a/misc/front_cover.tex
+++ b/misc/front_cover.tex
@@ -10,7 +10,7 @@
     {\scshape \Large Rapport de stage 2021 \par}
     
     \vfill
-    {\scshape \huge Développement sur le DSL PhaistOS \par}
+    {\scshape \huge Développement sur le compilateur de PhaistOS \par}
     
     \vfill
     {\scshape\Large Tome Principal \par}
