--- a/report.tex
+++ b/report.tex
@@ -48,6 +48,7 @@
 \vspace{2cm}
 \input{misc/abstract}
 \input{sections/intro}
+\input{sections/phaistos}
 \input{sections/context}
 \input{sections/contrib}
 \input{sections/hindsight}
